Fix checkstyle warnings and critical LogsCenter bug